<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeatherUndergroundApp</string>
    <string name="title_section1">Current Conditions</string>
    <string name="title_section2">Hourly</string>
    <string name="title_section3">Three Day</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <string name="hourlyLabel1">Time</string>
    <string name="hourlyLabel2">Temp</string>
    <string name="hourlyLabel3">Feels like</string>
    <string name="hourlyLabel4">Condition</string>
    <string name="hourlyLabel5">Wind dir</string>

</resources>
